<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="description_selectuser">选择用户</string>
    <string name="lg_autv_usename">用户名</string>
    <string name="lg_tv_password">密码</string>
    <string name="lg_btn_login">登&#160;&#160;&#160;&#160;录</string>
    <string name="lg_btn_test">演&#160;&#160;&#160;&#160;示</string>
    <string name="app_name">咕嘟</string>
    <string name="util_action_settings">设置</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="common_shcool">学校</string>
    <string name="common_department">院系</string>
    <string name="common_school_time">入学时间</string>
    <string name="common_degree">学历</string>
    <string name="common_next_step">下一步</string>
    <string name="register_select_shcool">请选择学校</string>
    <string name="register_select_department">请选择院系</string>
    <string name="register_select_school_time">请选择入学年份</string>
    <string name="register_select_degree">请选择学历</string>
    <string name="register_has_account">已有帐号？</string>
    <string name="register_search_school_hint">请输入学校名称或拼音</string>
    <string name="loading">正在加载</string>

</resources>