<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_rice" >

    <LinearLayout
        android:id="@+id/ll_register_form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="selectSchool"
            android:paddingBottom="4dip"
            android:paddingLeft="7dip"
            android:paddingTop="4dip" >

            <TextView
                android:id="@+id/tv_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/common_shcool"
                android:textColor="@color/black1"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_school_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/list_icon_arrow" />

            <TextView
                android:id="@+id/tv_school_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="1dip"
                android:layout_toLeftOf="@id/iv_school_select"
                android:text="@string/register_select_shcool"
                android:textColor="@color/textview_hint"
                android:textSize="13sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_marginLeft="7dip"
            android:layout_marginRight="7dip"
            android:background="@color/white_rice" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="selectDepartment"
            android:paddingBottom="4dip"
            android:paddingLeft="7dip"
            android:paddingTop="4dip" >

            <TextView
                android:id="@+id/tv_depart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/common_department"
                android:textColor="@color/black1"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_depart_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/list_icon_arrow" />

            <TextView
                android:id="@+id/tv_depart_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="1dip"
                android:layout_toLeftOf="@id/iv_depart_select"
                android:text="@string/register_select_department"
                android:textColor="@color/textview_hint"
                android:textSize="13sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_marginLeft="7dip"
            android:layout_marginRight="7dip"
            android:background="@color/white_rice" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="selectDegree"
            android:paddingBottom="4dip"
            android:paddingLeft="7dip"
            android:paddingTop="4dip" >

            <TextView
                android:id="@+id/tv_degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/common_degree"
                android:textColor="@color/black1"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_degree_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/list_icon_arrow" />

            <TextView
                android:id="@+id/tv_degree_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="1dip"
                android:layout_toLeftOf="@id/iv_degree_select"
                android:text="@string/register_select_degree"
                android:textColor="@color/textview_hint"
                android:textSize="13sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_marginLeft="7dip"
            android:layout_marginRight="7dip"
            android:background="@color/white_rice" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:onClick="selectTime"
            android:paddingBottom="4dip"
            android:paddingLeft="7dip"
            android:paddingTop="4dip" >

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/common_school_time"
                android:textColor="@color/black1"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_time_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/list_icon_arrow" />

            <TextView
                android:id="@+id/tv_time_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="1dip"
                android:layout_toLeftOf="@id/iv_time_select"
                android:text="@string/register_select_school_time"
                android:textColor="@color/textview_hint"
                android:textSize="13sp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="2px"
            android:layout_marginLeft="7dip"
            android:layout_marginRight="7dip"
            android:background="@color/white_rice" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:layout_below="@id/ll_register_form"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="30dip"
        android:background="#4bbba2"
        android:onClick="nextStep"
        android:text="@string/common_next_step"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/ll_register_form"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/register_logo" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:text="@string/register_has_account"
            android:textColor="@color/textview_hint" />
    </LinearLayout>

</RelativeLayout>