<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_gb"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:id="@+id/llyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_logo_kingdee" />

        <ImageButton
            android:id="@+id/ibtnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/login_gb"
            android:contentDescription="@string/util_action_settings"
            android:src="@drawable/settings_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llyt"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/login_appname_margintop"
                android:drawableTop="@drawable/logo"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/login_txtsize" />

            <TextView
                android:id="@+id/hospital_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15px"
                android:textColor="@color/black"
                android:text=""/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <RelativeLayout
                android:id="@+id/username_linear"
                android:layout_width="@dimen/login_username_width"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" >

                <LinearLayout
                    android:id="@+id/llt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/login_user_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/lg_autv_usename"
                        android:src="@drawable/login_userlogo" />

                    <AutoCompleteTextView
                        android:id="@+id/edt_Name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/input_rect_left_up"
                        android:dropDownHeight="@dimen/login_btn_dropDownHeight"
                        android:dropDownHorizontalOffset="0dp"
                        android:dropDownVerticalOffset="0dp"
                        android:hint="@string/lg_autv_usename"
                        android:inputType="number"
                        android:nextFocusDown="@+id/edit_Pass"
                        android:paddingLeft="@dimen/login_paddingleft"
                        android:popupBackground="@drawable/login_filter_bg"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textCursorDrawable="@null" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/login_select_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/login_btn_padding"
                    android:layout_alignBottom="@id/llt_username"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/llt_username"
                    android:layout_centerVertical="true"
                    android:background="@color/transparent"
                    android:contentDescription="@string/description_selectuser"
                    android:src="@drawable/login_select_bg" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/password_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/username_linear"
                android:layout_alignRight="@id/username_linear"
                android:layout_below="@id/username_linear"
                android:layout_centerHorizontal="true" >

                <ImageView
                    android:id="@+id/login_password_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/lg_tv_password"
                    android:src="@drawable/login_passwordlogo" />

                <EditText
                    android:id="@+id/edt_Pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/input_rect_left_down"
                    android:hint="@string/lg_tv_password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/login_paddingleft"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/password_linear"
                android:layout_alignRight="@id/password_linear"
                android:layout_below="@id/password_linear"
                android:layout_marginTop="@dimen/login_btnlogin_margintop"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnDemonstrate"
                    style="@style/LoginButtonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/login_btn_margin"
                    android:layout_weight="1"
                    android:background="@drawable/login_btn_green"
                    android:text="@string/lg_btn_test" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/LoginButtonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/login_btn_margin"
                    android:layout_weight="1"
                    android:onClick="login"
                    android:background="@drawable/login_btn_blue"
                    android:text="@string/lg_btn_login" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>